# periodicos-mcp

./: .gitignore  DEPLOY.md  README.md  add_journals_mestre.py  app.py  dados_expandidos.py  download_data.py  download_data_v2.py  download_data_v3.py  download_final.py  gera_dados_expandidos.py  processa_abdc.py  pyproject.toml  requirements.txt  server.py
data/: abdc.csv  abdc_temp.xlsx  capes.csv  sjr.csv  spell.csv
